plrustc/plrustc/uitests/tuple_struct_self_pat_box.stderr
# Portions Copyright 2021-2025 Technology Concepts & Design, Inc.
#
# All rights reserved.
#
# Use of this source code is governed by the PostgreSQL license that can be
# found in the LICENSE.md file.
error[E0603]: tuple struct constructor `std::boxed::Box` is private
  --> $DIR/tuple_struct_self_pat_box.rs:10:13
   |
LL |         let Self(ptr, _) = self;
   |             ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
